Calculate total done, to do : get people number and custom percent

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       <p id="total">Total</p>
       <p id="person2">/ person</p>
 
+      <p id="money">$</p>
+      <p id="money2">$</p>
       <p id="tip-amount-num"></p>
       <p id="total-amount"></p>
   
