Tip calculator works but not customized percentage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <button id="fifteen-percent">15%</button>
       <button id="twenty-five-percent">25%</button>
       <button id="fifty-percent">50%</button>
-      <input type="number" id="custom" placeholder="Custom">
+      <input type="number" id="custom" placeholder="Custom" onblur="getCustomPercent()">
   
     <p id="number-people">Number of People</p>
     <p id="error"></p>
@@ -64,7 +64,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/etemesgen">Edomiyas Temesgen</a>.
+    Coded by <a href="https://github.com/etemesgen">⚡ Edomiyas Temesgen ⚡</a>.
   </div>
 </body>
 </html>
