Tip calculator works but have to hide input value once clicked to have just the button value

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <button id="twenty-five-percent">25%</button>
       <button id="fifty-percent">50%</button>
       <input type="number" id="custom" placeholder="Custom" onblur="getCustomPercent()">
+      <button id="customValue"></button>
   
     <p id="number-people">Number of People</p>
     <p id="error"></p>
